# WhisperWave_Client

./: .gitignore  README.md  pyproject.toml
whisperwave/: start.py
whisperwave/core/: consumer.py  http.py  tts.py  ui.py
