[tool.poetry]
name = "neotts"
version = "0.1.0"
description = ""
authors = ["midnigh8k <midnigh8k@sapo.pt>"]
readme = "README.md"
packages = [
    { include = "whisperwave/*.py" }
]

[tool.poetry.dependencies]
python = "^3.13"
customtkinter = "^5.2.2"
gTTS = "2.5.4"
pygame = "^2.6.1"
requests = "^2.32.3"
pika = "^1.3.2"

[tool.poetry.scripts]
whisperwave = "whisperwave.start:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
